--- a/application/modules/default/views/scripts/user/changepass.phtml
+++ b/application/modules/default/views/scripts/user/changepass.phtml
@@ -26,6 +26,11 @@
         width: 800px;
     }
     
+    .errors {
+        text-align: left;
+        padding-left: 20px;
+    }
+    
 </style>
 
 <div class="container page-container">
@@ -43,13 +48,13 @@
                 data-trigger="#password-trigger">
                 <div class="row">
                     <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6">
-                        <div class="col-md-8 col-lg-8 col-sm-8 col-xs-8" style="padding-bottom: 15px;">
+                        <div class="col-md-9 col-lg-9 col-sm-9 col-xs-9" style="padding-bottom: 15px;">
                             <?= $this->passwordform->passwordOld->setAttrib('tabindex', 1) ?>
                         </div>
-                        <div class="col-md-8 col-lg-8 col-sm-8 col-xs-8" style="padding-bottom: 15px;">
+                        <div class="col-md-9 col-lg-9 col-sm-9 col-xs-9" style="padding-bottom: 15px;">
                             <?= $this->passwordform->password1->setAttrib('tabindex', 2) ?>
                         </div>
-                        <div class="col-md-8 col-lg-8 col-sm-8 col-xs-8" style="padding-bottom: 15px;">
+                        <div class="col-md-9 col-lg-9 col-sm-9 col-xs-9" style="padding-bottom: 15px;">
                             <?= $this->passwordform->password2->setAttrib('tabindex', 3) ?>
                         </div>
                       
