--- a/application/modules/default/views/layout/layout_appimagehub_home.phtml
+++ b/application/modules/default/views/layout/layout_appimagehub_home.phtml
@@ -61,7 +61,7 @@
     <script type="text/javascript" src="/theme/react/lib/mdl/material.min.js"></script>
     <script type="text/javascript" src="/theme/react/lib/timeago/timeago.min.js"></script>
     <script type="text/javascript" src="/theme/react/lib/md5/md5.js"></script>
-
+    <script src="/theme/flatui/js/script.js?<?= APPLICATION_VERSION ?>"></script>
 
 </head>
 <body>
