--- a/httpdocs/theme/flatui/less/explore_index.less
+++ b/httpdocs/theme/flatui/less/explore_index.less
@@ -104,6 +104,15 @@
 				text-align: right;
 			}
 		}
+		.moderatorscontainer{
+			text-align:center;
+			width: 75px; 
+			height: 75px; 
+			display: block;
+			float: left; 
+			overflow: hidden;
+			padding: 10px;
+		}
 	}
 	.explore-products{
 		/*padding-left: 0px;*/
