--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -3287,6 +3287,12 @@ span.page-views {
                 padding: 5px 10px;
                 font-size: 16px;
             }
+            .mod-badge{
+                display: block;                    
+                text-align: center;              
+                padding-top: 3px;
+                font-size: small;
+            }
 
             h1 {
               margin: 1.5em 0 0 0;
