--- a/application/modules/default/views/scripts/user/changepass.phtml
+++ b/application/modules/default/views/scripts/user/changepass.phtml
@@ -40,7 +40,7 @@
             
             
             <p>
-                For technical reasons it is necessary to change your password.
+                For technical reasons to provide a more secure password storage, it is required to change your password once.
             </p>
             
             <form class="standard-form well partial" action="<?= $this->passwordform->getAction(); ?>"
