--- a/application/modules/default/views/scripts/credits/index.phtml
+++ b/application/modules/default/views/scripts/credits/index.phtml
@@ -214,7 +214,7 @@ $credits = $model->fetchCredits();
 
                             <div class="col-lg-1 col-md-1 col-sm-1">
                                 <figure>                                   
-                                        <a href="<?=$helpMemberUrl->buildMemberUrl($this->product->member_id)?>">    <img class="reporterimage tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$this->product->reported_by?>" 
+                                        <a href="<?=$helpMemberUrl->buildMemberUrl($this->product->reported_by)?>">    <img class="reporterimage tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$this->product->reported_by?>" 
                                                     src="<?php echo $this->Image($this->product->reporter_profile_image_url,array('width' => 50, 'height' => 50)); ?>" 
                                                 />                                       
                                         </a>
